--- a/example-etl/package.yaml
+++ b/example-etl/package.yaml
@@ -23,8 +23,11 @@ dependencies:
 - base >= 4.7 && < 5
 - json-alt
 - aeson
-- beam
+- beam-core
 - beam-sqlite
+- beam-migrate
+build-tools:
+- beam-migrate-cli
 
 library:
   source-dirs: src
