--- a/example-etl/package.yaml
+++ b/example-etl/package.yaml
@@ -23,11 +23,10 @@ dependencies:
 - base >= 4.7 && < 5
 - json-alt
 - aeson
-- beam-core
-- beam-sqlite
-- beam-migrate
-build-tools:
-- beam-migrate-cli
+- Frames
+- vinyl
+- Chart
+- Chart-cairo
 
 library:
   source-dirs: src
